[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/kenney_platformerpack/PNG/Enemies/saw.png" type="Texture" id=1]
[ext_resource path="res://scenes/Saw.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/ough-47202.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/massive-thump-116359.mp3" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 55.0364

[node name="Saw" type="RigidBody2D"]
collision_layer = 3
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AudioHitPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="AudioHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_Saw_body_entered"]
